--- a/css/homework7.css
+++ b/css/homework7.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: '작명';
+  src: url();
+}
+
+/* 윈도우에서 폰트 부드럽게 해주는 방법  */
+p,h4,h3,h2,h1,span {
+  transform: rotate(0.03deg);
+}
+
+body {
+  font-family: 'gulim';
+}
+
+
 .cart-background {
   width: 100%;
   background-color: #c2d3de;
