--- a/css/layout4.css
+++ b/css/layout4.css
@@ -16,13 +16,15 @@
 }
 
 .nav-container {
-  display: flex;
-  height: 50px;
-  align-items: center;
-  padding: 10px;
+padding: 0 15px;
 }
 
 .nav-item {
-  margin-right: 10px;
+  float: left;
+}
+
+.nav-item2 {
+  float: right;
+  margin: 0 30px;
 }
 
