--- a/css/homework8.css
+++ b/css/homework8.css
@@ -5,6 +5,7 @@
 .container {
   display: flex;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .wrapper {
@@ -14,6 +15,18 @@
 
 .margin {
   margin: 0 40px;
+  text-align: center;
+}
+
+.container i {
+  background-color: burlywood;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  padding-top: 25px;
+  box-sizing: border-box;
+  color: white;
+
 }
 
 
